# porfolio-backend

./: docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: django.yml
account/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_customuser_about_alter_customuser_phone_and_more.py
core/: .env.sample  settings.py  urls.py
education/: admin.py  models.py  serializers.py  urls.py  views.py
education/migrations/: 0001_initial.py  0002_alter_education_degree_alter_education_organization_and_more.py
utils/: permissions.py
